stop card headers from not wrapping for mobile etc

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -45,6 +45,7 @@ html, body {
 
 .card-header{
   padding: 0 0 0 24px !important;
+  white-space: normal !important;
 }
 
 .layout-container {
